prevent overflow of text in advice boxes

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -29,3 +29,7 @@ input, button, select, textarea {
 .text-center{
   text-align: center;
 }
+
+.long-text{
+  word-wrap: break-word;
+}
